<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">


    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/slider_desc"
        android:value="50.0"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:haloColor="#D5BCBC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        app:tickColor="@color/white"
        app:tickColorActive="@color/white"
        app:tickVisible="false" />

    <ImageView
        android:id="@+id/imageView"

        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cover_art"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252"
        app:srcCompat="@drawable/coverart" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="38dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="339dp"
        android:layout_marginBottom="369dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back_button"

        app:layout_constraintBottom_toTopOf="@+id/slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        app:srcCompat="@drawable/back" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/pause_button"
        android:src="@drawable/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/next_button"
        android:src="@drawable/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#02FFFFFF"
        android:contentDescription="@string/prev_button"
        android:src="@drawable/prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

</androidx.constraintlayout.widget.ConstraintLayout>